--- a/angular.json
+++ b/angular.json
@@ -83,7 +83,7 @@
         },
         "serve": {
           "options": {
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": ""
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
