--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.3",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
     "rxjs": "~7.4.0",
@@ -35,6 +36,7 @@
     "@angular/cli": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0-next.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^12.11.1",
     "jasmine": "^4.5.0",
     "jasmine-core": "~3.10.0",
