--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +25,10 @@
     "@asymmetrik/ngx-leaflet": "^13.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@types/jest": "^29.4.0",
     "bootstrap": "^5.2.3",
+    "jest": "^28.1.3",
+    "jest-preset-angular": "^12.2.6",
     "jquery": "^3.6.3",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
@@ -35,16 +40,8 @@
     "@angular-devkit/build-angular": "^13.3.10",
     "@angular/cli": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0-next.0",
-    "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.16",
     "@types/node": "^12.11.1",
-    "jasmine": "^4.5.0",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
   }
 }
