--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "proxy": "ng serve --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +29,7 @@
     "@types/jest": "^29.4.0",
     "angularx-qrcode": "^13.0.15",
     "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.6",
     "jquery": "^3.6.3",
@@ -42,7 +44,6 @@
     "@angular/cli": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0-next.0",
     "@types/jquery": "^3.5.16",
-    "@types/node": "^12.11.1",
     "typescript": "~4.4.3"
   }
 }
