--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^3.6.3",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
+    "ngx-toastr": "14.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
