--- a/angular.json
+++ b/angular.json
@@ -84,7 +84,8 @@
         },
         "serve": {
           "options": {
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "proxy.conf.json",
+            "port": 50111
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
